set(TARGET_NAME 00Core)

ALLSRCLIST(SRCLIST)
add_library(${TARGET_NAME} STATIC ${SRCLIST})

if (AXE_USE_DYNAMIC_MIMALLOC)
    AXE_LOG("using mimalloc (dynamic)")
    target_link_libraries(${TARGET_NAME} PUBLIC mimalloc)
else()
    AXE_LOG(" using mimalloc-static")
    target_link_libraries(${TARGET_NAME} PUBLIC mimalloc-static)
endif()

target_link_libraries(${TARGET_NAME} PUBLIC SDL2-static spdlog::spdlog_header_only lockfreequeue)
target_include_directories(${TARGET_NAME} PUBLIC ${RUNTIME_INCLUDE_DIR})
target_include_directories(${TARGET_NAME} PUBLIC ${MAGIC_ENUM_INCLUDE_DIR})
target_include_directories(${TARGET_NAME} PUBLIC ${THIRD_PARTY_INCLUDE_DIR}/mimalloc/include)
target_include_directories(${TARGET_NAME} PUBLIC ${GLM_INCLUDE_DIR})
target_include_directories(${TARGET_NAME} PUBLIC ${LOCKFREEQUEUE_INCLUDE_DIR})
set_target_properties(${TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Runtime")